# df-demo

./: .gitignore  README.md
cicd/: Jenkinsfile  README.md
cicd/test/: Dockerfile  docker-compose.yml
diagram/: dotnet-architecture.eraserdiagram
docker/: Dockerfile  Makefile  container-structure-test.yaml
docker/app/: app.py  pyproject.toml
docker/app/static/css/: style.css
docker/app/templates/: about.html  base.html  checkout.html  home.html  order_complete.html  ticket.html
infra-provisioning/: outputs.tf  s3-cloudfront-logs.tf  s3-dave.tf  s3-wizards.tf  s3-wizards.tf.alt  variables.tf
jenkins/test/: Dockerfile  job_config.xml  plugins.yaml
terraform/: locals.tf  provider.tf  s3-cloudfront-logs.tf  s3-dave.tf
